Add initial tests and gcov integration

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,17 +7,24 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 add_subdirectory(googletest)
 enable_testing()
 
-add_executable(
-  hello_test
-  hello_test.cc
-)
+include_directories(../include ../thirdparty)
+link_libraries(gtest_main bsd)
+add_compile_options(-march=native)
 
-target_link_libraries(
-  hello_test
-  gtest
-  gtest_main
-  pthread
-)
+option(IGNORE_ATTRIBUTES "Compile with -Wno-ignored-attributes" ON)
+if (IGNORE_ATTRIBUTES)
+    add_compile_options(-Wno-ignored-attributes)
+endif()
+
+option(COVERAGE "Compile with coverage instrumentation" OFF)
+if(COVERAGE)
+    add_compile_options(-g -O0 -fno-inline -fno-inline-small-functions -fno-default-inline -fprofile-arcs -ftest-coverage)
+    link_libraries(gcov)
+endif()
+
+add_executable(dpf_key_test tests/dpf_key_test.cpp)
+add_executable(eval_point_test tests/eval_point_test.cpp)
 
 include(GoogleTest)
-gtest_discover_tests(hello_test)
+gtest_discover_tests(dpf_key_test)
+gtest_discover_tests(eval_point_test)
