--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/doxygen-awesome-css"]
 	path = thirdparty/doxygen-awesome-css
 	url = https://github.com/DigitalLibertiesLab/doxygen-awesome-css.git
+[submodule "thirdparty/json"]
+	path = thirdparty/json
+	url = https://github.com/DigitalLibertiesLab/json.git
