--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,6 +27,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 add_executable(dpf_key_test tests/dpf_key_test.cpp)
 add_executable(eval_point_test tests/eval_point_test.cpp)
 add_executable(eval_interval_test tests/eval_interval_test.cpp)
+add_executable(eval_full_test tests/eval_full_test.cpp)
 add_executable(eval_sequence_test tests/eval_sequence_test.cpp)
 
 # add_executable(value_param_test tests/value_param_test.cpp)
@@ -36,6 +37,7 @@ include(GoogleTest)
 gtest_discover_tests(dpf_key_test)
 gtest_discover_tests(eval_point_test)
 gtest_discover_tests(eval_interval_test)
+gtest_discover_tests(eval_full_test)
 gtest_discover_tests(eval_sequence_test)
 
 # gtest_discover_tests(value_param_test)
