--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,10 @@
 *.app
 
 # Doxygen
-docs/**
+build/docs/**
+doc/doxygen.log
+doc/libdpf.tag.xml
+doc/libdpf_full.md
 
 # Visual Studio Code
 .vscode
