--- a/.gitmodules
+++ b/.gitmodules
@@ -16,7 +16,7 @@
 	url = https://github.com/DigitalLibertiesLab/simde.git
 [submodule "thirdparty/asio"]
 	path = thirdparty/asio
-	url = https://github.com:DigitalLibertiesLab/asio.git
+	url = https://github.com/DigitalLibertiesLab/asio.git
 [submodule "test/googletest"]
 	path = test/googletest
 	url = https://github.com/google/googletest.git
